# pyviewshed

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CD.yml  CI.yml
.ipynb_checkpoints/: example-checkpoint.ipynb
examples/: real_example.ipynb
src/pyviewshed/: CMakeLists.txt  bindings.cpp  defs.h  eventlist.cpp  eventlist.h  grass.cpp  grass.h  grid.cpp  grid.h  logging.h  main.cpp  rbbst.cpp  rbbst.h  statusstructure.cpp  statusstructure.h  utils.cpp  utils.h  viewshed.cpp  viewshed.h  visibility.cpp  visibility.h
src/pyviewshed.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: CMakeLists.txt  test_main.cpp  test_utils.cpp
