[metadata]
name = pyviewshed
description = A port of grass.r.viewshed
author = Jan-Hendrik Ewers
author_email = j.ewers.1@research.gla.ac.uk
license = GPL-3.0-or-later
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/iwishiwasaneagle/pyviewshed/
project_urls =
    Source = "https://github.com/iwishiwasaneagle/pyviewshed"
platforms = Linux
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English

[options]
zip_safe = False
python_requires = >=3.8
install_requires =
    importlib-metadata; python_version<"3.8"

[options.packages.find]
where = src
exclude =
    tests
